--- a/Resources/AddStingFooterView.xib
+++ b/Resources/AddStingFooterView.xib
@@ -9,28 +9,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaybackViewController" customModule="Stingtk" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="nSx-fl-0bd" customClass="AddStingFooterView" customModule="Stingtk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <view contentMode="scaleToFill" id="nSx-fl-0bd" customClass="UICollectionReusableView">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNO-0v-bdV">
-                    <rect key="frame" x="143.5" y="44.5" width="33.5" height="31"/>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                    <state key="normal" image="plus" catalog="system">
-                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font" scale="large">
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                        </preferredSymbolConfiguration>
-                    </state>
-                    <connections>
-                        <action selector="addSting" destination="-1" eventType="touchUpInside" id="3yT-Xc-bWZ"/>
-                    </connections>
-                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M79-Hx-TiW" customClass="BorderedView" customModule="Stingtk" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNO-0v-bdV">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                            <state key="normal" image="plus" catalog="system">
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font" scale="large">
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                </preferredSymbolConfiguration>
+                            </state>
+                            <connections>
+                                <action selector="addSting" destination="-1" eventType="touchUpInside" id="3yT-Xc-bWZ"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="WNO-0v-bdV" secondAttribute="bottom" id="CuW-ry-fH6"/>
+                        <constraint firstAttribute="trailing" secondItem="WNO-0v-bdV" secondAttribute="trailing" id="QjM-rf-g5I"/>
+                        <constraint firstItem="WNO-0v-bdV" firstAttribute="leading" secondItem="M79-Hx-TiW" secondAttribute="leading" id="ecg-Te-vh9"/>
+                        <constraint firstItem="WNO-0v-bdV" firstAttribute="top" secondItem="M79-Hx-TiW" secondAttribute="top" id="xJr-WB-Qje"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <color key="tintColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="WNO-0v-bdV" firstAttribute="centerY" secondItem="uNb-Am-QC4" secondAttribute="centerY" id="dyI-XS-gzL"/>
-                <constraint firstItem="WNO-0v-bdV" firstAttribute="centerX" secondItem="uNb-Am-QC4" secondAttribute="centerX" id="lHY-Yt-PIh"/>
+                <constraint firstItem="uNb-Am-QC4" firstAttribute="trailing" secondItem="M79-Hx-TiW" secondAttribute="trailing" id="GPj-HT-9xi"/>
+                <constraint firstItem="uNb-Am-QC4" firstAttribute="bottom" secondItem="M79-Hx-TiW" secondAttribute="bottom" constant="20" id="Kb1-Ec-Gif"/>
+                <constraint firstItem="M79-Hx-TiW" firstAttribute="top" secondItem="uNb-Am-QC4" secondAttribute="top" id="plr-UK-vGt"/>
+                <constraint firstItem="M79-Hx-TiW" firstAttribute="leading" secondItem="uNb-Am-QC4" secondAttribute="leading" id="uIv-Bl-KRu"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="uNb-Am-QC4"/>
