--- a/Resources/AddStingFooterView.xib
+++ b/Resources/AddStingFooterView.xib
@@ -7,9 +7,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaybackViewController" customModule="Stingtk" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="nSx-fl-0bd" customClass="UICollectionReusableView">
+        <view contentMode="scaleToFill" id="nSx-fl-0bd" customClass="AddStingFooterView" customModule="Stingtk" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -25,7 +25,7 @@
                                 </preferredSymbolConfiguration>
                             </state>
                             <connections>
-                                <action selector="addSting" destination="-1" eventType="touchUpInside" id="3yT-Xc-bWZ"/>
+                                <action selector="AddFromLibrary" destination="nSx-fl-0bd" eventType="touchUpInside" id="dZi-gc-obh"/>
                             </connections>
                         </button>
                     </subviews>
