--- a/Resources/AddStingFooterView.xib
+++ b/Resources/AddStingFooterView.xib
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14854.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14806.4"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -25,7 +24,7 @@
                                 </preferredSymbolConfiguration>
                             </state>
                             <connections>
-                                <action selector="AddFromLibrary" destination="nSx-fl-0bd" eventType="touchUpInside" id="dZi-gc-obh"/>
+                                <action selector="addFromLibrary" destination="nSx-fl-0bd" eventType="touchUpInside" id="dZi-gc-obh"/>
                             </connections>
                         </button>
                     </subviews>
